
[float]
===== Added
- Feature {pull}2526[#2526]

[float]
===== Changed
- Change {pull}2526[#2526]

[float]
===== Fixed
- Fix {pull}2526[#2526]

[float]
[[unreleased]]
==== Unreleased
////

[[release-notes-3.x]]
=== Ruby Agent version 3.x

[float]
[[unreleased]]
==== Unreleased

[float]
===== Added

- Pass along tracestate headers and add prefixless Traceparent header {pull}694[#694]

[float]
===== Changed

- Rename disabled_instrumentations to disable_instrumentations {pull}695[#695]

[float]
===== Fixed

- Fix thread race condition in Metric#collect method {pull}669[#669]

[[release-notes-3.4.0]]
==== 3.4.0 (2020-01-10)

[float]
===== Added

- Add `span.context.destination` fields {pull}647[#647]
- Add more precise (experimental) SQL summarizer {pull}640[#640]
- Add support for Shoryuken (AWS SQS) {pull}674[#674]
- Add support for Sneakers (Experimental) {pull}676[#676]
- Add option `api_key` (experimental) to specify an Api key to use with the apm server {pull}655[#655]

[float]
===== Changed

- Allow action dispatch spy to be disabled via `disabled_instrumentations` {pull}657[#657]

[float]
===== Fixed

- Fix Rails Console detection when top-level `Console` constant defined {pull}664[#664]
- Fix Ruby 2.7 related deprecation warnings {pull}667[#667]
- Fix HTTP response header values not being converted to strings {pull}675[#675]

[[release-notes-3.3.0]]
==== 3.3.0 (2019-12-05)

[float]
===== Added

- Add option `disable_metrics` {pull}625[#625]

[float]
===== Fixed

- Make Filters thread-safe {pull}624[#624]
- Omit passwords in outgoing urls {pull}629[#629]
- Add missing mutex to Counter metrics {pull}636[#636]
- Correct span context collection name for Mongo getMore commands {pull}637[#637]

[[release-notes-3.2.0]]
==== 3.2.0 (2019-11-19)

[float]
===== Added

- Add Grape support. {pull}562[#562]
- Add Breakdown Metrics {pull}526[#526]

[float]
===== Changes

- Set remote_addr to immediate socket {pull}615[#615]

[float]
===== Fixed
