@@ -31,8 +31,6 @@ module ElasticAPM
     end
 
     it 'converts certain env values to Ruby types' do
-      allow_any_instance_of(Config).to receive(:warn)
-        .with(/default_tags=.*removed./)
       [
         # [ 'NAME', 'VALUE', 'EXPECTED' ]
         ['ELASTIC_APM_SOURCE_LINES_ERROR_APP_FRAMES', '666', 666],
@@ -45,12 +43,6 @@ module ElasticAPM
         ['ELASTIC_APM_VERIFY_SERVER_CERT', '0', false],
         ['ELASTIC_APM_VERIFY_SERVER_CERT', 'false', false],
         ['ELASTIC_APM_DISABLE_INSTRUMENTATIONS', 'json,http', %w[json http]],
-        ['ELASTIC_APM_CUSTOM_KEY_FILTERS', 'Auth,Other', [/Auth/, /Other/]],
-        [
-          'ELASTIC_APM_DEFAULT_TAGS',
-          'test=something something&other=ok',
-          { 'test' => 'something something', 'other' => 'ok' }
-        ],
         [
           'ELASTIC_APM_DEFAULT_LABELS',
           'wave=something erlking&brother=ok',
@@ -124,13 +116,6 @@ module ElasticAPM
       context 'without a unit' do
         subject { Config.new(api_request_size: '1') }
         its(:api_request_size) { should eq 1024 }
-      end
-    end
-
-    context 'custom_key_filters' do
-      it 'sets custom_key_filters to array of regexp' do
-        config = Config.new(custom_key_filters: [/Authorization/, 'String'])
-        expect(config.custom_key_filters).to eq [/Authorization/, /String/]
       end
     end
 
@@ -210,6 +195,17 @@ module ElasticAPM
     end
 
     context 'DEPRECATED' do
+      describe 'default_tags' do
+        subject { Config.new }
+
+        it 'logs a warning and redirects' do
+          expect(subject).to receive(:warn).with(/DEPRECATED/)
+          subject.default_tags = 'oh_no=its_gone'
+
+          expect(subject.default_labels).to eq('oh_no' => 'its_gone')
+        end
+      end
+
       describe 'disabled_instrumentations' do
         subject { Config.new }
 
@@ -220,6 +216,17 @@ module ElasticAPM
           expect(subject.disable_instrumentations).to eq(['oh no'])
           expect(subject.disabled_instrumentations)
             .to eq(subject.disable_instrumentations)
+        end
+      end
+
+      describe 'custom_key_filters' do
+        subject { Config.new }
+
+        it 'logs a warning' do
+          expect(subject).to receive(:warn).with(/DEPRECATED/)
+          subject.custom_key_filters = ['oh no']
+
+          expect(subject.custom_key_filters).to eq([/oh no/])
         end
       end
     end
